photos.html: unexpected blank space fixed
This occured when title of an individual photo was too long.

--- a/oclubs/static-dev/css/oclubs.pcss
+++ b/oclubs/static-dev/css/oclubs.pcss
@@ -2414,6 +2414,22 @@ a.white-a {
 	font-weight: bold;
 }
 
+@media screen and (min-width: 1200px) {
+	.clear-lg {
+		clear: both;
+	}
+}
+@media screen and (max-width: 1200px) and (min-width:768px) {
+	.clear-sm {
+		clear: both;
+	}
+}
+@media screen and (max-width: 768px) {
+	.clear-xs {
+		clear: both;
+	}
+}
+
 @media screen and (max-width: 992px) {
 	/* FIXME: what is this? */
 	.col-md-10 > center > img {
